Sketch structure + connect link styles to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,22 @@
-{% extends "base.html" %}
-
-{% block content %}
-<!-- Content Here -->
-<h2>From index.html</h2>
-{%endblock%}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <title>Opera Ireland</title>
+</head>
+<body>
+    <!-- Navigation -->
+    <!-- Image1 -->
+    <!-- Form -->
+    <!-- Image2 -->
+    <!-- Content -->
+    <!-- Footer -->
+</body>
+</html>
