Add Nav to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,20 @@
 </head>
 <body>
     <!-- Navigation -->
+    <nav class="navbar navbar-light navbar-expand-md py-0 fixed-top text-uppercase">
+        <a href="#" class="navbar-brand">Opera Ireland</a>
+        <!-- Nav Toggler -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-links" aria-label="Toggle Navigation Menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Nav Items -->
+        <div class="collapse navbar-collapse" id="nav-links">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Register</a></li>
+            </ul>
+        </div>
+    </nav>
     <!-- Image1 -->
     <!-- Form -->
     <!-- Image2 -->
