Add image and log in form-placeholder

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,21 @@
             </ul>
         </div>
     </nav>
-    <!-- Image1 -->
-    <!-- Form -->
-    <!-- Image2 -->
-    <!-- Content -->
+
+    <!-- Main Content -->
+    <section class="container-fluid">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <p>Log in form here.</p>
+            </div>
+            <div class="col-md-6">
+                <img src="static/images/theatre-seats.png" aria-hidden="true" class="img-fluid">
+            </div>
+        </div>
+
+
+    </section>
+
     <!-- Footer -->
 </body>
 </html>
