--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,15 @@
 body {
     background: #fafafa;
+    padding-top: 50px;
+    font-family: "Nunito", sans-serif;
+}
+
+.text-panel {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+#mainNavbar {
+    font-size: 1.5rem;
+    font-weight: 100;
 }
