--- a/templates/index.html
+++ b/templates/index.html
@@ -13,33 +13,75 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-light navbar-expand-md py-0 fixed-top text-uppercase">
-        <a href="#" class="navbar-brand">Opera Ireland</a>
-        <!-- Nav Toggler -->
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-links" aria-label="Toggle Navigation Menu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Nav Items -->
-        <div class="collapse navbar-collapse" id="nav-links">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Register</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="container-fluid">
+        <nav class="navbar navbar-light navbar-expand-md py-0 bg-light fixed-top text-uppercase">
+            <h1><a href="#" class="navbar-brand">Opera Ireland</a></h1>
+            <!-- Nav Toggler -->
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-links" aria-label="Toggle Navigation Menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Nav Items -->
+            <div class="collapse navbar-collapse" id="nav-links">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Register</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-    <!-- Main Content -->
+    <!-- Log in -->
     <section class="container-fluid">
         <div class="row align-items-center">
-            <div class="col-md-6">
-                <p>Log in form here.</p>
+            <!-- Form Panel-->
+            <div class="col-md-6 order-1 order-md-2 text-panel">
+                <div class="row align-items-center justify-content-center">
+                    <h2>Log in</h2>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-10 offset-1">
+                        <form action="" method="">
+                            <div class="form-group">
+                              <label for="username">Username: </label>
+                              <input type="text" class="form-control" id="username" placeholder="Enter username" required>
+                            </div>
+                            <div class="form-group">
+                              <label for="password">Password</label>
+                              <input type="password" class="form-control" id="password" placeholder="Password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Log In</button>
+                                <ul class="list-inline mt-2">
+                                    <li class="list-inline-item"><a href="#">Forgot Password</a></li>
+                                    <li class="list-inline-item"><a href="#">Create Account</a></li>
+                                </ul>
+                          </form>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6">
+            <!-- Image Panel -->
+            <div class="col-md-6 px-0 order-2 order-md-1">
                 <img src="static/images/theatre-seats.png" aria-hidden="true" class="img-fluid">
             </div>
         </div>
 
-
+    <!-- Brief About -->
+        <div class="row align-items-center">
+            <!-- About Panel-->
+            <div class="col-md-6 text-panel">
+                <div class="row align-items-center justify-content-center">
+                    <h2>About</h2>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-10 offset-1">
+                        Brief about text here.
+                    </div>
+                </div>
+            </div>
+            <!-- Image Panel-->
+            <div class="col-md-6 px-0">
+                <img src="static/images/cast-reading.jpg" aria-hidden="true" class="img-fluid">
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
