Rename index as signin, add new blank index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,3 +13,10 @@ body {
     font-size: 1.5rem;
     font-weight: 100;
 }
+
+footer {
+    color: #474646;
+    font-size: .75rem;
+    height: 50px;
+    padding-top: 20px;
+}
