--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,44 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/style.css">
+    <script src="https://kit.fontawesome.com/5d01ef762e.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Opera Ireland</title>
 </head>
 <body>
-<!-- Navigation -->
-<h1>From Base.index</h1>
-<!-- Main Content -->
+    <!-- Navigation -->
+    <div class="container-fluid">
+        <nav class="navbar navbar-light navbar-expand-md py-0 bg-light fixed-top main-navbar">
+            <h1><a href="#" class="navbar-brand">Opera Ireland</a></h1>   
+                <!-- Nav Toggler -->
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-links" aria-label="Toggle Navigation Menu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Nav Items -->
+                <div class="collapse navbar-collapse" id="nav-links">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-plus-square d-none d-md-inline"></i> New Post</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-cog d-none d-md-inline"></i> Settings</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-sign-out-alt"></i> Sign Out</a></li>
+                    </ul>
+                </div>
+        </nav>
+    </div>
+
+    <!-- Main Content -->
     {% block content %}
     <!-- Content -->
     {% endblock content %}
 
-<!-- Footer -->
-    <footer></footer>
+    <!-- Footer -->
+    <footer class="text-center">&copy;2022</footer>
     
 </body>
 </html>
