--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-plus-square d-none d-md-inline"></i> New Post</a></li>
                         <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-cog d-none d-md-inline"></i> Settings</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-sign-out-alt"></i> Sign Out</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-sign-out-alt d-none d-md-inline"></i> Sign Out</a></li>
                     </ul>
                 </div>
         </nav>
