--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 <section class="container py-4">
     <div class="row align-items-center mb-2">
         <div class="col-4 col-md-3">
-            <img src="../static/images/Unknown_person.jpg" class="profile-avatar avatar mx-2" aria-describedby="user-full-name">
+            <img src="../static/images/default-user.jpg" class="profile-avatar avatar mx-2" aria-describedby="user-full-name">
         </div>
         <div class="col-8 col-md-9">
             <div class="row">
@@ -21,4 +21,25 @@
             </div>
         </div>
     </div>
+    <!-- if social links -->
+    <div class="row align-items-center">
+        <div class="col-10 offset-1">
+            <ul id="social-links" class="list-inline row">
+                <li class="col-4">
+                    <a href="#" class="px-2">SiteName</a>
+                </li>
+                <li class="col-4">
+                    <a href="#" class="px-2">SiteName</a>
+                </li>
+                <li class="col-4">
+                    <a href="#" class="px-2">SiteName</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<!-- profile body -->
+<section class="container">
+    <!-- About/Bio/History -->
+</section>
 {% endblock content %}
