--- a/templates/profile.html
+++ b/templates/profile.html
@@ -40,6 +40,35 @@
 </section>
 <!-- profile body -->
 <section class="container">
-    <!-- About/Bio/History -->
+    <!-- HISTORY -->
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-5">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="mb-3 text-uppercase">
+                            History
+                        </h3>
+                    </div>
+                </div>
+                <div class="mb-4">
+                    <!-- for item in history -->
+                    <div class="history-item">
+                        <p class="history-item-year">2018</p>
+                        <h4>Production/Company</h4>
+                        <h5>Company/Theatre</h5>
+                        <p>Role</p>
+                    </div>
+                    <div class="history-item">
+                        <p class="history-item-year">2019</p>
+                        <h4>Production/Company</h4>
+                        <h5>Company/Theatre</h5>
+                        <p>Role</p>
+                    </div>
+                </div>
+            </div>
+            <!-- temp. closing tag, pick up from here: -->
+            <!-- BIO & POSTS -->
+        </div>
 </section>
 {% endblock content %}
