--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                 <form action="/search" method="POST">
                     {% csrf_token %}
                     <div class="input-group mb-1 mt-1">
-                        <input type="text" class="form-control" placeholder="Search users..." aria-label="Search users by name" aria-describedby="search-button">
+                        <input type="text" class="form-control" placeholder="Search users..." aria-label="Search users by name">
                         <button class="btn btn-outline-secondary" type="submit" id="search-button"><i class="fas fa-search"></i></button>
                     </div>
                 </form>
