--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 <section class="container py-4">
     <div class="row align-items-center mb-2">
         <div class="col-4 col-md-3">
-            <img src="../static/images/default-user.jpg" class="profile-avatar avatar mx-2" aria-describedby="user-full-name">
+            <img src="../static/images/default-user.jpg" class="profile-avatar avatar mx-2" aria-labelledby="user-full-name">
         </div>
         <div class="col-8 col-md-9">
             <div class="row">
@@ -37,8 +37,8 @@
             </ul>
         </div>
     </div>
-</section>
-<!-- profile body -->
+</section> <!-- End of Profile Header -->
+ <!-- Profile Body -->
 <section class="container">
     <!-- HISTORY -->
     <section class="container-fluid">
@@ -82,10 +82,38 @@
                         Posts
                         </h3>
                     </div>
+                    <!-- if posts: for post in posts: -->
                     <div class="row">
-                        <!-- if posts: for post in posts: -->
-                        Content here.
-                    </div>
+                        <div class="col-12 px-0">
+                            <!-- Post Template: -->
+                            <div class="card mt-2 mb-3 mx-0 shadow rounded">
+                                <!-- ROW 1 -->
+                                <div class="card-header px-2">
+                                    <h5>
+                                        <img src="../static/images/default-user.jpg" class="post-avatar avatar" aria-labelledby="post-user-full-name">
+                                        <a href="#" id="post-user-full-name">Firstname Lastname</a>
+                                    </h5>
+                                </div>
+                                <!-- ROW 2 (Image in post, if any) -->
+                                <img class="card-img-top" src="" alt="" id="post-image">
+                                <!-- ROW 3 (Post date and written content) -->
+                                <div class="card-body">
+                                    <p class="text-right" id="post-date">xx/xx/xxxx</p>
+                                    <p class="card-text" id="post-text">Written post content goes here. Written post content goes here. Written post content goes here. Written post content goes here. Written post content goes here. Written post content goes here.</p>
+                                    <div class="card-footer">
+                                        <div class="row justify-between">
+                                            <div class="col-4 col-md-4">Like</div>
+                                            <div class="col-6 col-md-4 text-center px-0">Comments</div>
+                                            <div class="col-2 col-md-4 text-right"><i class="fas fa-chevron-down"></i>
+                                            <!-- Options may include:
+                                            share, edit, delete, disable comments, bookmark/save -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> <!-- end of post template -->
+                    </div> <!-- end of 'if posts, for post in posts' -->
                 </div>
             </div>
         </div>
