Fix: Settings input too wide for sml mobile

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,11 +9,12 @@
             <hr>
         </div>
     </div>
+    <!-- Profile Settings -->
     <div class="col-12">
         <div>
-            <h3 class="mb-2">General</h3>
+            <h3 class="mb-2">Profile</h3>
         </div>
-        <div class="shadow p-3 mb-5 bg-white rounded">
+        <div class="shadow p-3 mb-4 bg-white rounded">
             <form action="" method="POST" enctype="multipart/form-data">
                 % csrf_token %
                 <div class="row px-3">
