--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,4 +92,10 @@ h3 {
 
 #avatar-upload {
     max-width: 100%;
-    }
+    font-size: .9rem
+}
+
+#profile-url {
+    word-wrap: break-word;
+    overflow-wrap: break-word
+}
