--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <!-- ROW 1 -->
         <div class="card-header px-2">
             <h5>
-                <img src="../static/images/default-user.jpg" class="post-avatar avatar" aria-labelledby="post-user-full-name">
+                <img src="{% static '/images/default-user.jpg' %}" class="post-avatar avatar" aria-labelledby="post-user-full-name">
                 <a href="#" id="post-user-full-name">Firstname Lastname</a>
             </h5>
         </div>
