--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 <section class="container py-4">
     <div class="row align-items-center mb-2">
         <div class="col-4 col-md-3">
-            <img src="../static/images/default-user.jpg" class="profile-avatar avatar mx-2" aria-labelledby="user-full-name">
+            <img src="{% static '/images/default-user.jpg' %}" class="profile-avatar avatar mx-2" aria-labelledby="user-full-name">
         </div>
         <div class="col-8 col-md-9">
             <div class="row">
@@ -90,7 +90,7 @@
                                 <!-- ROW 1 -->
                                 <div class="card-header px-2">
                                     <h5>
-                                        <img src="../static/images/default-user.jpg" class="post-avatar avatar" aria-labelledby="post-user-full-name">
+                                        <img src="{% static '/images/default-user.jpg' %}" class="post-avatar avatar" aria-labelledby="post-user-full-name">
                                         <a href="#" id="post-user-full-name">Firstname Lastname</a>
                                     </h5>
                                 </div>
