--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12">
+        <div class="scol-12">
             <h2><a href="#">Home</a> / Settings</h2>
                 <h3>Firstname Lastname</h3>
             <hr>
@@ -80,7 +80,7 @@
                     <div class="col-12 col-md-6 justify-content-center px-0">
                         <div class="col-12 mb-1">
                             <label for="avatar-upload">Profile Image</label>
-                            <img width="100" height="100" src="../static/images/default-user.jpg"/>
+                            <img width="100" height="100" src="{% static 'images/default-user.jpg' %}"/>
                         </div>
                         <div class="col-12">
                             <input type="file" name="image" id="avatar-upload" value="">
