--- a/templates/signin.html
+++ b/templates/signin.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <title>Sign In - Opera Ireland</title>
 </head>
 <body>
@@ -61,7 +61,7 @@
             </div>
             <!-- Image Panel -->
             <div class="col-md-6 px-0 order-2 order-md-1">
-                <img src="../static/images/theatre-seats.png" aria-hidden="true" class="img-fluid">
+                <img src="{% static '/images/theatre-seats.png' %}" aria-hidden="true" class="img-fluid">
             </div>
         </div>
 
@@ -80,7 +80,7 @@
             </div>
             <!-- Image Panel-->
             <div class="col-md-6 px-0">
-                <img src="../static/images/cast-reading.jpg" aria-hidden="true" class="img-fluid">
+                <img src="{% static '/images/cast-reading.jpg' %}" aria-hidden="true" class="img-fluid">
             </div>
         </div>
     </section>
