--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,21 @@
         </nav>
     </div>
 
+    {% if messages %}
+    <section class="container-fluid">
+        <div class="row justify-content-center align-items-center alert alert-warning" role="alert" id="message-div">
+            <div class="col-12">
+                <strong>Message(s):</strong>
+                    <ul>
+                        {% for message in messages %}
+                        <li>{{message}}</li>
+                        {% endfor %}
+                    </ul>
+            </div>
+        </div>
+    </section>
+    {% endif %}
+
     <!-- Search bar -->
     <section class="container-fluid mt-2">
         <div class="row justify-content-center align-items-center">
