--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
+
+{% block head_title %}{% trans "Profile" %}{% endblock %}
 
 {% block content %}
 <!-- Profile Header-->
