--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
+
+<title>{% block head_title %}{% trans "Account Settings" %}{% endblock %}</title>
+
 {% block content %}
 <div class="container-fluid">
     <div class="row">
