--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -52,7 +52,7 @@
     </div>
     <!-- Image Panel-->
     <div class="col-md-6 px-0">
-      <img src="{% static '/images/cast-reading.jpg' %}" aria-hidden="true" class="img-fluid">
+      <img src="{% static 'images/cast-reading.jpg' %}" aria-hidden="true" class="img-fluid">
     </div>
   </div>
 </section>
