--- a/templates/account-settings.html
+++ b/templates/account-settings.html
@@ -8,19 +8,19 @@
 <div class="container-fluid">
     <div class="row">
         <div class="scol-12">
-            <h2><a href="{% url 'index' %}">Home</a> / Settings</h2>
+            <h2><a href="#">Home</a> / Settings</h2>
                 <h3>{{user.profile.first_name}} {{user.profile.last_name}}</h3>
             <hr>
         </div>
     </div>
-    <form action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <!-- Your Details -->
-        <div class="col-12">
-            <div>
-                <h3 class="mb-2">Your Details</h3>
-            </div>
-            <div class="shadow p-3 mb-4 bg-white rounded">
+    <!-- Your Details -->
+    <div class="col-12">
+        <div>
+            <h3 class="mb-2">Your Details</h3>
+        </div>
+        <div class="shadow p-3 mb-4 bg-white rounded">
+            <form action="" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
                 <div class="row px-3">
                     <div class="col-12 col-md-6 justify-content-center px-0">
                         <div class="col-12 mb-2">
@@ -43,20 +43,6 @@
                         </div>
                     </div>
 
-
-                    <div class="col-12 col-md-6 justify-content-center px-0 mb-2">
-                            <label for="location">Location</label>
-                            <input type="text" name="location" id="location" value="{{user.profile.location}}">
-                    </div>
-
-                    <div class="col-12 col-md-6 justify-content-center px-0 mb-2">
-                        <label for="link1">Link:</label>
-                        <input type="text" name="link1" id="link1" value="{{user.profile.link1}}">
-                        <label for="link2">Link:</label>
-                        <input type="text" name="link2" id="link2" value="{{user.profile.link2}}">
-                        <label for="link1">Link:</label>
-                        <input type="text" name="link3" id="link3" value="{{user.profile.link3}}">
-                    </div>
 
                     <!-- <div class="col-12 col-md-6 justify-content-center px-0"> -->
                         <!-- role selection: may remove. Unlikely to change post-registration -->
@@ -82,46 +68,45 @@
                         </div>
                     </div> end of role selection -->
                 </div>
-            </div>
-        </div> <!-- end of 'your details' -->
-        <!-- Profile Basics -->
-        <div class="col-12">
-            <div>
-                <h3 class="mb-2">Profile Basics</h3>
-            </div>
-            <div class="shadow p-3 mb-4 bg-white rounded">
-                <form action="" method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="row px-3">
-                        <div class="col-12 col-md-6 justify-content-center px-0">
-                            <div class="col-12 mb-1">
-                                <label for="avatar-upload">Profile Image</label>
-                                <img width="100" height="100" src="{{ user.profile.avatar.url }}"/>
-                            </div>
-                            <div class="col-12">
-                                <input type="file" name="image" id="avatar-upload" value="">
-                            </div>
+                <!-- save/cancel -->
+            </form>
+        </div>
+    </div> <!-- end of 'your details' -->
+    <!-- Profile Basics -->
+    <div class="col-12">
+        <div>
+            <h3 class="mb-2">Profile Basics</h3>
+        </div>
+        <div class="shadow p-3 mb-4 bg-white rounded">
+            <form action="" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="row px-3">
+                    <div class="col-12 col-md-6 justify-content-center px-0">
+                        <div class="col-12 mb-1">
+                            <label for="avatar-upload">Profile Image</label>
+                            <img width="100" height="100" src="{% static 'images/default-user.jpg' %}"/>
                         </div>
-
-                        <div class="col-12 col-md-6 justify-content-center px-0">
-                            <div class="col-12 mb-1">
-                                <label for="bio">Bio</label>
-                            </div>
-                            <div class="col-12 mb-1">
-                                <textarea id="bio" name="bio" rows="4">{{user.profile.bio}}</textarea>
-                            </div>
+                        <div class="col-12">
+                            <input type="file" name="image" id="avatar-upload" value="">
                         </div>
                     </div>
-                    <!-- social links -->
-                    <!-- save/cancel -->
-                </form>
-            </div>
-        </div> <!-- end of profile basics -->
-        <!-- history section -->
-        <!-- save/cancel -->
-        <!-- history section -->
-        <button class="btn btn-primary" type="submit">{% trans "Save" %}</button>
-        <button class="btn btn-light"><a href="{% url 'index' %}">{% trans "Cancel" %}</a></button>
-    </form>
+
+                    <div class="col-12 col-md-6 justify-content-center px-0">
+                        <div class="col-12 mb-1">
+                            <label for="bio">Bio</label>
+                        </div>
+                        <div class="col-12 mb-1">
+                            <textarea id="bio" name="bio" rows="4">{{user.profile.bio}}</textarea>
+                        </div>
+                    </div>
+                </div>
+                <!-- social links -->
+                <!-- save/cancel -->
+            </form>
+        </div>
+    </div> <!-- end of profile basics -->
+    <!-- history section -->
+    <!-- save/cancel -->
+    <!-- history section -->
 </div>
 {% endblock content %}
