--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <div class="container-fluid">
         <nav class="navbar navbar-light navbar-expand-md py-0 bg-light fixed-top main-navbar">
-            <h1><a href="#" class="navbar-brand">Opera Ireland</a></h1>   
+            <h1><a href="{% url 'index' %}" class="navbar-brand">Opera Ireland</a></h1>   
                 <!-- Nav Toggler -->
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-links" aria-label="Toggle Navigation Menu">
                     <span class="navbar-toggler-icon"></span>
@@ -26,12 +26,12 @@
                     <ul class="navbar-nav ml-auto">
                         {% if user.is_authenticated %}
                             <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-plus-square d-none d-md-inline"></i> New Post</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-cog d-none d-md-inline"></i> Settings</a></li>
-                            <li class="nav-item"><a href="{% url 'account_logout' %}" class="nav-link"><i class="fas fa-sign-out-alt d-none d-md-inline"></i> Sign Out</a></li>
+                            <li class="nav-item"><a href="{% url 'settings' %}" class="nav-link"><i class="fas fa-cog d-none d-md-inline"></i> Settings</a></li>
+                            <li class="nav-item"><a href="{% url 'signout' %}" class="nav-link"><i class="fas fa-sign-out-alt d-none d-md-inline"></i> Sign Out</a></li>
                         {% else %}
                             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                            <li class="nav-item"><a href="{% url 'account_login' %}" class="nav-link">Sign In</a></li>
-                            <li class="nav-item"><a href="{% url 'account_signup' %}" class="nav-link">Sign Up</a></li>
+                            <li class="nav-item"><a href="{% url 'signin' %}" class="nav-link">Sign In</a></li>
+                            <li class="nav-item"><a href="{% url 'signup' %}" class="nav-link">Sign Up</a></li>
                         {% endif %}
                     </ul>
                 </div>
