--- a/templates/profile.html
+++ b/templates/profile.html
@@ -77,7 +77,7 @@
                         <h3 class="mb-3 text-uppercase">Bio</h3>
                     </div>
                     <div class="row">
-                        <p>Content here.</p>
+                        <p>{{user.profile.bio}}</p>
                     </div>
                     <!-- Posts -->
                     <div class="row">
