--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,12 +16,14 @@
       <div class="row align-items-center">
         <div class="col-10 offset-1">
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>Already have an account? Then please <a href="{% url 'signin' %}">sign in</a>.</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+<form class="signup" id="signup_form" method="post" action="{% url 'signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
+  {{form.first_name}}
+  {{form.last_name}}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
