--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,26 +10,26 @@
 <section class="container-fluid">
   <div class="row align-items-center">
     <!-- Form Panel-->
-    <div class="col-md-6 order-1 order-md-2 text-panel">
+    <div class="col-md-6 order-1 order-md-2 text-panel align-items-center">
       <div class="row align-items-center justify-content-center">
         <h2>{% trans "Sign in" %}</h2>
       </div>
       <div class="row align-items-center">
         <div class="col-10 offset-1">
 
-          <p class="mt-2">If you have not created an account yet, please
+          <p class="mt-1">If you have not created an account yet, please
             <a href="{% url 'signup' %}">sign up</a> first.</p>
 
             <form action="" method="POST">
               {% csrf_token %}
               <div class="row">
-                <div class="form-group col-10 justify-content-center align-items-center">
+                <div class="form-group col-12 col-md-10 justify-content-center align-items-center">
                   <label for="username">Username: </label>
-                  <input type="text" class="form-control" id="username" required>
+                  <input type="text" class="form-control" id="username" name="username" required>
                 </div>
-                <div class="form-group col-10 justify-content-center align-items-center">
+                <div class="form-group col-12 col-md-10 justify-content-center align-items-center">
                   <label for="password">Password: </label>
-                  <input type="password" class="form-control" id="password" required>
+                  <input type="password" class="form-control" id="password" name="password" required>
                 </div>
             </div>
             <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
