--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,12 +9,12 @@
 <section class="container py-4">
     <div class="row align-items-center mb-2">
         <div class="col-4 col-md-3">
-            <img src="{% static '/images/default-user.jpg' %}" class="profile-avatar avatar mx-2" aria-labelledby="user-full-name">
+            <img src="{{ user_profile.avatar.url }}" class="profile-avatar avatar mx-2" aria-labelledby="user-full-name">
         </div>
         <div class="col-8 col-md-9">
             <div class="row">
                 <div class="col-12">
-                    <h2 id="user-full-name">Firstname Lastname</h2>    
+                    <h2 id="user-full-name">{{ user_profile.first_name }} {{ user_profile.last_name }}</h2>    
                 </div>
             </div>
             <div class="row">
@@ -29,7 +29,7 @@
         <div class="col-10 offset-1">
             <ul id="social-links" class="list-inline row">
                 <li class="col-4">
-                    <a href="#" class="px-2">SiteName</a>
+                    <a href="#" class="px-2">{{ user_profile.link1 }}</a>
                 </li>
                 <li class="col-4">
                     <a href="#" class="px-2">SiteName</a>
@@ -77,7 +77,7 @@
                         <h3 class="mb-3 text-uppercase">Bio</h3>
                     </div>
                     <div class="row">
-                        <p>{{user.profile.bio}}</p>
+                        <p>{{user_profile.bio}}</p>
                     </div>
                     <!-- Posts -->
                     <div class="row">
