--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
         <div class="col-8 col-md-9">
             <div class="row">
                 <div class="col-12">
-                    <h2 id="user-full-name">{{ user_profile.first_name }} {{ user_profile.last_name }}</h2>    
+                    <a href="{{user_profile.user.username}}"><h2 id="user-full-name">{{ user_profile.first_name }} {{ user_profile.last_name }}</h2></a>    
                 </div>
             </div>
             <div class="row">
