Add own-profile link to signed-in Nav

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 
-{% block head_title %}{% trans "Profile" %}{% endblock %}
+{% block head_title %}{% trans "Profile " %}{{user_profile.user.username}}{% endblock %}
 
 {% block content %}
 <!-- Profile Header-->
