--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,8 @@
                         {% if user.is_authenticated %}
                             <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-plus-square d-none d-md-inline"></i> New Post</a></li>
                             <li class="nav-item"><a href="{% url 'settings' %}" class="nav-link"><i class="fas fa-cog d-none d-md-inline"></i> Settings</a></li>
-                            <li class="nav-item"><a href="{% url 'signout' %}" class="nav-link"><i class="fas fa-sign-out-alt d-none d-md-inline"></i> Sign Out</a></li>
+                            <li class="nav-item"><a href="/profile/{{user.username}}" class="nav-link"><i class="fas fa-user d-none d-md-inline"></i> {{user.username}}</a></li>
+                            <li class="nav-item"><a href="{% url 'signout' %}" class="nav-link"><i class="fas fa-sign-out-alt d-none d-md-inline"></i> Sign Out</a></li>  
                         {% else %}
                             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                             <li class="nav-item"><a href="{% url 'signin' %}" class="nav-link">Sign In</a></li>
